syntax = "proto3";

package auth;

import "common/common.proto"; // Import file common

option java_multiple_files = true;
option java_package = "com.group9.warehouse.grpc";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUserProfile(common.EmptyRequest) returns (ProfileResponse);
  rpc UpdateUserProfile(UpdateProfileRequest) returns (common.ServiceResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (common.ServiceResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string role = 3;
  string token = 4;
}

message UserProfile {
  string username = 1;
  string role = 2;
  string fullName = 3;
  string email = 4;
  string phone = 5;
  string sex = 6;
  string dateOfBirth = 7;
  bool isActive = 8;
}

message ProfileResponse {
  bool success = 1;
  string message = 2;
  UserProfile profile = 3;
}

message UpdateProfileRequest {
  string fullName = 1;
  string email = 2;
  string phone = 3;
  string sex = 4;
  string dateOfBirth = 5;
}

message ChangePasswordRequest {
  string oldPassword = 1;
  string newPassword = 2;
}